# c-template

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  test.c
